# MRS3D

./: CMakeLists.txt  Doxyfile.in  README
src/IDL/: demoDSBT.pro  dsbt_besselZeros.pro  dsbt_direct.pro  dsbt_free.pro  dsbt_init.pro  dsbt_inverse.pro  dsbt_kgrid.pro  dsbt_rgrid.pro  mrs3d_almn2cln.pro  mrs3d_almn2cube.pro  mrs3d_almn2field.pro  mrs3d_field2almn.pro  mrs3d_load_almn.pro  mrs3d_load_cln.pro  mrs3d_load_field.pro  mrs3d_load_qln.pro  mrs3d_save_almn.pro  mrs3d_save_cln.pro  mrs3d_save_field.pro
src/cxx/: MRS3D_IDL.cpp  almn.h  almn2field.cpp  almn2wavelet.cpp  almn_cln_tools.cpp  almn_cln_tools.h  almn_field_tools.h  almn_fitsio.cpp  almn_fitsio.h  almn_healpix_tools.h  backprojection.cpp  cln.h  cln_fitsio.cpp  cln_fitsio.h  fastDSBT.cpp  fastDSBT.h  fastDSBT_IDL.cpp  field.h  field2almn.cpp  field_fitsio.cpp  field_fitsio.h  gen_qln.cpp  sbtools.cpp  sbtools.h  selectionFunction.h  waveletDecomposition.h  waveletThresholding.cpp  waveletTreatment.h
src/f90/: rfsfns.f  sbtools.f90
